--- a/index.html
+++ b/index.html
@@ -8,7 +8,17 @@
 </head>
 <body>
     <h1>Minesweeper</h1>
+    
+    <div class="controls">
+        <button id="start-btn">Start</button>
+        <button id="restart-btn" disabled>Restart</button>
+        <div>Time: <span id="timer">0</span>s</div>
+        <div>Score: <span id="score">0</span></div>
+    </div>
+    
     <div id="game-board"></div>
+
     <script src="script.js"></script>
 </body>
 </html>
+
