--- a/index.html
+++ b/index.html
@@ -1,24 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Minesweeper</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Space Shooter Game</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Minesweeper</h1>
-    
-    <div class="controls">
-        <button id="start-btn">Start</button>
-        <button id="restart-btn" disabled>Restart</button>
-        <div>Time: <span id="timer">0</span>s</div>
-        <div>Score: <span id="score">0</span></div>
-    </div>
-    
-    <div id="game-board"></div>
-
-    <script src="script.js"></script>
+  <canvas id="gameCanvas"></canvas>
+  <script src="script.js"></script>
 </body>
 </html>
-
