--- a/index.html
+++ b/index.html
@@ -3,240 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flappy Bird Game</title>
-    <style>
-        body, html {
-            margin: 0;
-            padding: 0;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            background-color: #70c5ce;
-        }
-
-        #stats {
-            width: 100%;
-            max-width: 312px;
-            background-color: #000;
-            color: #fff;
-            padding: 8px;
-            font-size: 10px;
-            text-align: left;
-            margin-bottom: 2px;
-            border-radius: 1px;
-        }
-
-        canvas {
-            border: 2px solid #000;
-            background-color: #70c5ce;
-            width: 100%;
-            max-width: 400px;
-            height: auto;
-        }
-    </style>
+    <title>Fast Typer Game</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- Stats Area -->
-    <div id="stats">
-        <p id="score">Score: 0</p>
-        <p id="highScore">High Score: 0</p>
-        <p id="attempts">Attempts: 0</p>
-        <p id="time">Time: 0.0s</p>
-        <p id="tps">TPS: 0.0</p>
+    <div class="container">
+        <h1>Fast Typer Game</h1>
+        <div id="word-display">Click Start to Begin</div>
+        <input type="text" id="word-input" placeholder="Type the word here" disabled>
+        <div id="score-board">
+            <p>Time Left: <span id="time">10</span> seconds</p>
+            <p>Score: <span id="score">0</span></p>
+        </div>
+        <button id="start-button">Start Game</button>
     </div>
 
-    <!-- Game Canvas -->
-    <canvas id="flappyBirdGame"></canvas>
-
-    <script>
-        const canvas = document.getElementById('flappyBirdGame');
-        const ctx = canvas.getContext('2d');
-
-        // Set initial dimensions
-        canvas.width = 320;
-        canvas.height = 480;
-
-        // Bird variables
-        const bird = {
-            x: 50,
-            y: 150,
-            width: 20,
-            height: 20,
-            gravity: 0.6,
-            lift: -8,
-            velocity: 0
-        };
-
-        // Pipe variables
-        const pipes = [];
-        const pipeWidth = 40;
-        let pipeGap = 110;
-        let pipeSpeed = 3;
-
-        // Game state
-        let gameOver = false;
-        let score = 0;
-        let highestScore = localStorage.getItem('highestScore') || 0;
-        let attemptCount = localStorage.getItem('attemptCount') || 0;
-        let timeElapsed = 0;
-        let gameTimeInterval = null;
-
-        // TPS variables
-        let touchCount = 0;
-        let tps = 0;
-
-        // Update stats
-        function updateStats() {
-            document.getElementById('score').textContent = 'Score: ' + score;
-            document.getElementById('highScore').textContent = 'High Score: ' + highestScore;
-            document.getElementById('attempts').textContent = 'Attempts: ' + attemptCount;
-            document.getElementById('time').textContent = 'Time: ' + (timeElapsed / 1000).toFixed(1) + 's';
-            document.getElementById('tps').textContent = 'TPS: ' + tps.toFixed(1);
-        }
-
-        function drawBird() {
-            ctx.fillStyle = '#ff0';
-            ctx.fillRect(bird.x, bird.y, bird.width, bird.height);
-        }
-
-        function createPipe() {
-            const pipeHeight = Math.floor(Math.random() * (canvas.height - pipeGap));
-            pipes.push({
-                x: canvas.width,
-                height: pipeHeight,
-                passed: false
-            });
-        }
-
-        function drawPipes() {
-            pipes.forEach((pipe, index) => {
-                ctx.fillStyle = '#228B22';
-                ctx.fillRect(pipe.x, 0, pipeWidth, pipe.height);
-                ctx.fillRect(pipe.x, pipe.height + pipeGap, pipeWidth, canvas.height - pipe.height - pipeGap);
-
-                pipe.x -= pipeSpeed;
-
-                if (pipe.x + pipeWidth < 0) {
-                    pipes.splice(index, 1);
-                }
-
-                if (!pipe.passed && pipe.x + pipeWidth < bird.x) {
-                    pipe.passed = true;
-                    score++;
-
-                    if (score % 5 === 0) {
-                        pipeSpeed += 0.4;
-                        pipeGap -= 5;
-                        if (pipeGap < 90) pipeGap = 90;
-                    }
-                    updateStats();
-                }
-
-                if (bird.x < pipe.x + pipeWidth && bird.x + bird.width > pipe.x &&
-                    (bird.y < pipe.height || bird.y + bird.height > pipe.height + pipeGap)) {
-                    gameOver = true;
-                }
-            });
-        }
-
-        function drawGameOver() {
-            ctx.fillStyle = 'red';
-            ctx.font = '40px Arial';
-            ctx.fillText('Game Over', canvas.width / 4, canvas.height / 2);
-        }
-
-        function updateBird() {
-            bird.velocity += bird.gravity;
-            bird.y += bird.velocity;
-
-            if (bird.velocity > 5) {
-                bird.velocity = 5;
-            }
-
-            if (bird.y + bird.height > canvas.height || bird.y < 0) {
-                gameOver = true;
-            }
-        }
-
-        function resetGame() {
-            bird.y = 150;
-            bird.velocity = 0;
-            pipes.length = 0;
-
-            if (score > highestScore) {
-                highestScore = score;
-                localStorage.setItem('highestScore', highestScore);
-            }
-
-            score = 0;
-            pipeSpeed = 3;
-            pipeGap = 110;
-            gameOver = false;
-
-            attemptCount++;
-            localStorage.setItem('attemptCount', attemptCount);
-
-            clearInterval(gameTimeInterval);
-            timeElapsed = 0;
-            touchCount = 0;
-            tps = 0;
-            updateStats();
-            startTimer();
-        }
-
-        function startTimer() {
-            gameTimeInterval = setInterval(() => {
-                if (!gameOver) {
-                    timeElapsed += 100;
-
-                    if (timeElapsed > 0) {
-                        tps = touchCount / (timeElapsed / 1000);
-                    }
-                    updateStats();
-                }
-            }, 100);
-        }
-
-        function flapBird() {
-            if (!gameOver) {
-                bird.velocity = bird.lift;
-                touchCount++;
-            } else {
-                resetGame();
-            }
-        }
-
-        // Handle both touch and keyboard input for mobile and PC compatibility
-        document.addEventListener('keydown', function(event) {
-            if (event.code === 'Space') {
-                flapBird();
-            }
-        });
-
-        canvas.addEventListener('touchstart', flapBird);
-
-        function gameLoop() {
-            ctx.clearRect(0, 0, canvas.width, canvas.height);
-
-            if (!gameOver) {
-                updateBird();
-                drawBird();
-                drawPipes();
-
-                if (pipes.length === 0 || pipes[pipes.length - 1].x < canvas.width - 200) {
-                    createPipe();
-                }
-            } else {
-                drawGameOver();
-                clearInterval(gameTimeInterval);
-            }
-
-            requestAnimationFrame(gameLoop);
-        }
-
-        updateStats();
-        gameLoop();
-        startTimer();
-    </script>
+    <script src="script.js"></script>
 </body>
 </html>
