--- a/index.html
+++ b/index.html
@@ -7,7 +7,27 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
+    <div class="container" id="auth-container">
+        <h1>Fast Typer Game</h1>
+
+        <div id="login-form">
+            <h2>Login</h2>
+            <input type="text" id="login-username" placeholder="Username" required>
+            <input type="password" id="login-password" placeholder="Password" required>
+            <button id="login-button">Login</button>
+            <p>Don't have an account? <a href="#" id="show-register">Register here</a></p>
+        </div>
+
+        <div id="register-form" style="display:none;">
+            <h2>Register</h2>
+            <input type="text" id="register-username" placeholder="Username" required>
+            <input type="password" id="register-password" placeholder="Password" required>
+            <button id="register-button">Register</button>
+            <p>Already have an account? <a href="#" id="show-login">Login here</a></p>
+        </div>
+    </div>
+
+    <div class="container" id="game-container" style="display:none;">
         <h1>Fast Typer Game</h1>
         <div id="word-display">Click Start to Begin</div>
         <input type="text" id="word-input" placeholder="Type the word here" disabled>
@@ -16,6 +36,7 @@
             <p>Score: <span id="score">0</span></p>
         </div>
         <button id="start-button">Start Game</button>
+        <button id="logout-button">Logout</button>
     </div>
 
     <script src="script.js"></script>
