--- a/index.html
+++ b/index.html
@@ -7,37 +7,36 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <!-- Login/Register Section -->
-        <div id="auth-container">
-            <h1>Login to Play</h1>
-            <div id="login-form">
-                <input type="text" id="username" placeholder="Username">
-                <input type="password" id="password" placeholder="Password">
-                <button id="login-btn">Login</button>
-                <p>Don't have an account? <a href="#" id="register-link">Register here</a></p>
-            </div>
+    <div class="container" id="auth-container">
+        <h1>Fast Typer Game</h1>
 
-            <div id="register-form" style="display: none;">
-                <input type="text" id="register-username" placeholder="Username">
-                <input type="password" id="register-password" placeholder="Password">
-                <button id="register-btn">Register</button>
-                <p>Already have an account? <a href="#" id="login-link">Login here</a></p>
-            </div>
+        <div id="login-form">
+            <h2>Login</h2>
+            <input type="text" id="login-username" placeholder="Username" required>
+            <input type="password" id="login-password" placeholder="Password" required>
+            <button id="login-button">Login</button>
+            <p>Don't have an account? <a href="#" id="show-register">Register here</a></p>
         </div>
 
-        <!-- Game Section (hidden until login) -->
-        <div id="game-container" style="display: none;">
-            <h1>Fast Typer Game</h1>
-            <div id="word-display">Click Start to Begin</div>
-            <input type="text" id="word-input" placeholder="Type the word here" disabled>
-            <div id="score-board">
-                <p>Time Left: <span id="time">10</span> seconds</p>
-                <p>Score: <span id="score">0</span></p>
-                <p>TPS: <span id="tps">0</span></p>
-            </div>
-            <button id="start-button">Start Game</button>
+        <div id="register-form" style="display:none;">
+            <h2>Register</h2>
+            <input type="text" id="register-username" placeholder="Username" required>
+            <input type="password" id="register-password" placeholder="Password" required>
+            <button id="register-button">Register</button>
+            <p>Already have an account? <a href="#" id="show-login">Login here</a></p>
         </div>
+    </div>
+
+    <div class="container" id="game-container" style="display:none;">
+        <h1>Fast Typer Game</h1>
+        <div id="word-display">Click Start to Begin</div>
+        <input type="text" id="word-input" placeholder="Type the word here" disabled>
+        <div id="score-board">
+            <p>Time Left: <span id="time">10</span> seconds</p>
+            <p>Score: <span id="score">0</span></p>
+        </div>
+        <button id="start-button">Start Game</button>
+        <button id="logout-button">Logout</button>
     </div>
 
     <script src="script.js"></script>
