--- a/index.html
+++ b/index.html
@@ -3,42 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fast Typer Game</title>
+    <title>Enhanced Space Shooter Game</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container" id="auth-container">
-        <h1>Fast Typer Game</h1>
-
-        <div id="login-form">
-            <h2>Login</h2>
-            <input type="text" id="login-username" placeholder="Username" required>
-            <input type="password" id="login-password" placeholder="Password" required>
-            <button id="login-button">Login</button>
-            <p>Don't have an account? <a href="#" id="show-register">Register here</a></p>
-        </div>
-
-        <div id="register-form" style="display:none;">
-            <h2>Register</h2>
-            <input type="text" id="register-username" placeholder="Username" required>
-            <input type="password" id="register-password" placeholder="Password" required>
-            <button id="register-button">Register</button>
-            <p>Already have an account? <a href="#" id="show-login">Login here</a></p>
-        </div>
+    <canvas id="gameCanvas"></canvas>
+    <div id="gameOverScreen">
+        <h1>Game Over</h1>
+        <button onclick="restartGame()">Restart</button>
     </div>
-
-    <div class="container" id="game-container" style="display:none;">
-        <h1>Fast Typer Game</h1>
-        <div id="word-display">Click Start to Begin</div>
-        <input type="text" id="word-input" placeholder="Type the word here" disabled>
-        <div id="score-board">
-            <p>Time Left: <span id="time">10</span> seconds</p>
-            <p>Score: <span id="score">0</span></p>
-        </div>
-        <button id="start-button">Start Game</button>
-        <button id="logout-button">Logout</button>
-    </div>
-
-    <script src="script.js"></script>
+    <script src="game.js"></script>
 </body>
 </html>
