--- a/index.html
+++ b/index.html
@@ -3,15 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Enhanced Space Shooter Game</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Space Shooter</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <canvas id="gameCanvas"></canvas>
-    <div id="gameOverScreen">
-        <h1>Game Over</h1>
-        <button onclick="restartGame()">Restart</button>
-    </div>
     <script src="game.js"></script>
 </body>
 </html>
