--- a/index.html
+++ b/index.html
@@ -1,14 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Space Shooter</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Game Tycoon</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <canvas id="gameCanvas"></canvas>
+  <div id="game-container">
+    <h1>Game Tycoon</h1>
 
-    <script src="script.js"></script>
+    <div id="info-panel">
+      <p>Company Name: <span id="company-name">Dream Dev Studios</span></p>
+      <p>Balance: $<span id="balance">5000</span></p>
+      <p>Employees: <span id="employees">3</span></p>
+    </div>
+
+    <div id="game-actions">
+      <h2>Actions</h2>
+      <button onclick="developGame()">Develop Game</button>
+      <button onclick="hireEmployee()">Hire Employee</button>
+      <button onclick="upgradeOffice()">Upgrade Office</button>
+    </div>
+
+    <div id="log-panel">
+      <h2>Game Log</h2>
+      <div id="log"></div>
+    </div>
+  </div>
+
+  <script src="app.js"></script>
 </body>
 </html>
