--- a/index.html
+++ b/index.html
@@ -3,28 +3,25 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Game Tycoon</title>
+  <title>Simple Game Tycoon</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div id="game-container">
-    <h1>Game Tycoon</h1>
+    <h1>Simple Game Tycoon</h1>
 
     <div id="info-panel">
-      <p>Company Name: <span id="company-name">Dream Dev Studios</span></p>
       <p>Balance: $<span id="balance">5000</span></p>
-      <p>Employees: <span id="employees">3</span></p>
+      <p>Employees: <span id="employees">1</span></p>
     </div>
 
-    <div id="game-actions">
-      <h2>Actions</h2>
+    <div id="actions">
       <button onclick="developGame()">Develop Game</button>
       <button onclick="hireEmployee()">Hire Employee</button>
-      <button onclick="upgradeOffice()">Upgrade Office</button>
     </div>
 
     <div id="log-panel">
-      <h2>Game Log</h2>
+      <h2>Log</h2>
       <div id="log"></div>
     </div>
   </div>
