--- a/index.html
+++ b/index.html
@@ -1,23 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Advanced Tower Defense</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="login-container">
-    <h2>Login</h2>
-    <form id="loginForm">
-      <input type="text" id="username" placeholder="Username" required>
-      <input type="password" id="password" placeholder="Password" required>
-      <button type="submit">Login</button>
-    </form>
-    <p>Don't have an account? <a href="register.html">Register</a></p>
-    <div id="error-message"></div>
-  </div>
-
-  <script src="script.js"></script>
+    <h1>Advanced Tower Defense</h1>
+    <canvas id="gameCanvas"></canvas>
+    <div id="gameInfo">
+        <p>Lives: <span id="lives">10</span></p>
+        <p>Money: <span id="money">100</span></p>
+        <p>Level: <span id="level">1</span></p>
+    </div>
+    <script src="game.js"></script>
 </body>
 </html>
