--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
         <p>Lives: <span id="lives">10</span></p>
         <p>Money: <span id="money">100</span></p>
         <p>Level: <span id="level">1</span></p>
+        <p>Score: <span id="score">0</span></p>
     </div>
+    <button id="startButton">Start Game</button>
+    <button id="pauseButton" disabled>Pause Game</button>
     <script src="game.js"></script>
 </body>
 </html>
