--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
         <p>Level: <span id="level">1</span></p>
         <p>Score: <span id="score">0</span></p>
     </div>
+    <div id="upgradeMenu">
+        <h2>Upgrade Menu</h2>
+        <p id="selectedTower">Select a tower to upgrade</p>
+        <button id="upgradeButton" disabled>Upgrade Tower</button>
+    </div>
     <button id="startButton">Start Game</button>
     <button id="pauseButton" disabled>Pause Game</button>
     <script src="game.js"></script>
