--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
         <p>Level: <span id="level">1</span></p>
         <p>Score: <span id="score">0</span></p>
     </div>
-    <div id="upgradeMenu">
-        <h2>Upgrade Menu</h2>
-        <p id="selectedTower">Select a tower to upgrade</p>
-        <button id="upgradeButton" disabled>Upgrade Tower</button>
+    <div id="upgradePanel" style="display:none;">
+        <h3>Upgrade Towers</h3>
+        <p id="selectedTowerInfo">Select a tower to upgrade:</p>
+        <button id="upgradeButton">Upgrade Tower</button>
     </div>
     <button id="startButton">Start Game</button>
     <button id="pauseButton" disabled>Pause Game</button>
