--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Social Network</title>
+    <title>Modern Social</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -12,16 +12,37 @@
     </header>
 
     <main>
-        <section id="post-section">
-            <h2>What's on your mind?</h2>
-            <textarea id="post-content" rows="4" placeholder="Write something..."></textarea>
-            <button id="post-btn">Post</button>
+        <!-- Login/Register Section -->
+        <section id="auth-section">
+            <h2>Login or Register</h2>
+            <div>
+                <input type="text" id="login-username" placeholder="Username">
+                <input type="password" id="login-password" placeholder="Password">
+                <button id="login-btn">Login</button>
+            </div>
+            <div>
+                <input type="text" id="register-username" placeholder="Username">
+                <input type="password" id="register-password" placeholder="Password">
+                <button id="register-btn">Register</button>
+            </div>
+            <p id="auth-error" class="error-message"></p>
         </section>
 
-        <section id="feed-section">
+        <!-- Post Section (Hidden unless logged in) -->
+        <section id="post-section" style="display: none;">
+            <h2>What's on your mind?</h2>
+            <textarea id="post-content" rows="4" placeholder="Write something..."></textarea>
+            <input type="file" id="post-image">
+            <button id="post-btn">Post</button>
+            <p id="file-error" class="error-message"></p>
+        </section>
+
+        <section id="feed-section" style="display: none;">
             <h2>Your Feed</h2>
             <div id="feed"></div>
         </section>
+
+        <button id="logout-btn" style="display: none;">Logout</button>
     </main>
 
     <footer>
