--- a/index.html
+++ b/index.html
@@ -19,14 +19,11 @@
             <button id="post-btn">Post</button>
         </div>
 
-        <div id="posts-section">
+        <div id="posts-section" class="scrollable">
             <!-- Posts will be dynamically loaded here -->
         </div>
     </div>
 
-    <!-- Firebase Authentication SDK -->
-    <script src="https://www.gstatic.com/firebasejs/9.19.1/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.19.1/firebase-auth.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
