--- a/index.html
+++ b/index.html
@@ -3,13 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fast Typer Game</title>
-    <link rel="stylesheet" href="static/style.css">
+    <title>Minesweeper</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="terminal">
-        <h1>Welcome to the Cyber Typing Challenge</h1>
-        <a href="/login">Login</a> | <a href="/register">Register</a>
+    <h1>Minesweeper</h1>
+    <div class="controls">
+        <span id="flags">Flags: 40</span>
+        <span id="timer">Time: 0</span>
     </div>
+    <div id="game-board"></div>
+
+    <script src="script.js"></script>
 </body>
 </html>
