--- a/index.html
+++ b/index.html
@@ -12,7 +12,13 @@
         <span id="flags">Flags: 40</span>
         <span id="timer">Time: 0</span>
     </div>
-    <div id="game-board"></div>
+    <div class="game-controls">
+        <button id="start-btn">Start Game</button>
+        <button id="resume-btn" style="display: none;">Resume Game</button>
+        <button id="restart-btn" style="display: none;">Restart Game</button>
+    </div>
+    <div id="game-board" style="display: none;"></div>
+    <button id="flag-toggle" style="display: none;">🚩 Toggle Flag</button>
 
     <script src="script.js"></script>
 </body>
