--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
     <button id="restart-btn">Restart</button>
   </div>
 
+  <div class="game-info">
+    <p><strong>Time:</strong> <span id="time-display">0</span> seconds</p>
+    <p><strong>Score:</strong> <span id="score-display">0</span></p>
+  </div>
+
   <div id="game-board"></div>
 
   <script src="script.js"></script>
