--- a/index.html
+++ b/index.html
@@ -1,32 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Advanced Minesweeper</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Minesweeper</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <h1>Advanced Minesweeper</h1>
-  
-  <div class="controls">
-    <label for="difficulty">Difficulty:</label>
-    <select id="difficulty">
-      <option value="easy">Easy</option>
-      <option value="medium">Medium</option>
-      <option value="hard">Hard</option>
-    </select>
-
-    <button id="restart-btn">Restart</button>
-  </div>
-
-  <div class="game-info">
-    <p><strong>Time:</strong> <span id="time-display">0</span> seconds</p>
-    <p><strong>Score:</strong> <span id="score-display">0</span></p>
-  </div>
-
-  <div id="game-board"></div>
-
-  <script src="script.js"></script>
+    <div class="header">
+        <div class="score">Score: <span id="score">0</span></div>
+        <div class="time">Time: <span id="time">00:00</span></div>
+        <div class="high-score">High Score: <span id="highScore">0</span></div>
+        <button id="restartBtn">Restart</button>
+    </div>
+    <div class="game-container">
+        <div id="game-board"></div>
+    </div>
+    <script src="minesweeper.js"></script>
 </body>
 </html>
