--- a/index.html
+++ b/index.html
@@ -3,21 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modern Minesweeper</title>
+    <title>Advanced Minesweeper</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
+    <div class="game-container">
         <div class="header">
-            <div class="score-timer">
-                <div id="timer">Time: 0</div>
-                <div id="score">Score: 0</div>
-            </div>
-            <button id="restartBtn">Restart</button>
+            <div class="timer">Time: <span id="timer">0</span></div>
+            <div class="score">Score: <span id="score">0</span></div>
+            <button id="restartBtn">Restart Game</button>
         </div>
-        <div id="minesweeperGrid" class="grid"></div>
+        <div id="minesweeper-grid" class="grid"></div>
     </div>
-
+    
     <script src="script.js"></script>
-</body>
+</body>a
 </html>
