--- a/index.html
+++ b/index.html
@@ -3,28 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modern Minesweeper</title>
+    <title>Advanced Typing Speed Test</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="header">
-        <h1>Minesweeper</h1>
-        <div class="controls">
-            <label for="difficulty">Difficulty:</label>
-            <select id="difficulty">
-                <option value="easy">Easy</option>
-                <option value="medium">Medium</option>
-                <option value="hard">Hard</option>
-            </select>
-            <button id="restart">Restart</button>
-            <div class="info">
-                <span id="timer">Time: 0s</span>
-                <span id="mines">Mines Left: 0</span>
-                <span id="flags">Flags: 0</span>
-            </div>
+    <div class="container">
+        <h1>Typing Speed Test</h1>
+        <div id="game-info">
+            <div id="time">Time: <span id="time-left">60</span> seconds</div>
+            <div id="score">Score: <span id="score-value">0</span></div>
+            <div id="tps">TPS: <span id="tps-value">0.00</span></div>
         </div>
+        <div id="word-display" class="word-display"></div>
+        <input type="text" id="word-input" class="word-input" placeholder="Type here..." autofocus>
+        <button id="start-btn" class="start-btn">Start Game</button>
+        <div id="result-message"></div>
     </div>
-    <div class="game-board" id="gameBoard"></div>
 
     <script src="script.js"></script>
 </body>
