--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Advanced Typing Speed Test</title>
+    <title>Typing Speed Game</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -13,6 +13,10 @@
             <div id="time">Time: <span id="time-left">60</span> seconds</div>
             <div id="score">Score: <span id="score-value">0</span></div>
             <div id="tps">TPS: <span id="tps-value">0.00</span></div>
+        </div>
+        <div id="mode-buttons">
+            <button id="60s-mode" class="mode-btn">60-Second Mode</button>
+            <button id="10s-mode" class="mode-btn">10-Second Challenge Mode</button>
         </div>
         <div id="word-display" class="word-display"></div>
         <input type="text" id="word-input" class="word-input" placeholder="Type here..." autofocus>
