--- a/index.html
+++ b/index.html
@@ -9,22 +9,31 @@
 <body>
     <div class="container">
         <h1>Typing Speed Test</h1>
+        <div id="menu-toggle" class="menu-toggle">&#9776;</div> <!-- Hamburger Menu -->
         <div id="game-info">
             <div id="time">Time: <span id="time-left">60</span> seconds</div>
             <div id="score">Score: <span id="score-value">0</span></div>
             <div id="tps">TPS: <span id="tps-value">0.00</span></div>
         </div>
-        <div id="mode-selection">
-            <label for="mode-select">Select Mode: </label>
-            <select id="mode-select" class="mode-select">
-                <option value="60s">60-Second Mode</option>
-                <option value="10s">10-Second Challenge Mode</option>
-            </select>
-        </div>
         <div id="word-display" class="word-display"></div>
         <input type="text" id="word-input" class="word-input" placeholder="Type here..." autofocus>
         <button id="start-btn" class="start-btn">Start Game</button>
         <div id="result-message"></div>
+
+        <!-- Side Menu -->
+        <div id="side-menu" class="side-menu">
+            <button id="close-menu" class="close-menu">&times;</button>
+            <h2>Settings</h2>
+            <label for="mode-select">Select Mode:</label>
+            <select id="mode-select" class="mode-select">
+                <option value="60s">60-Second Mode</option>
+                <option value="10s">10-Second Challenge Mode</option>
+                <option value="5s">5-Second Challenge Mode</option> <!-- New 5-Second Mode -->
+            </select>
+
+            <label for="dark-mode-toggle">Dark Mode:</label>
+            <input type="checkbox" id="dark-mode-toggle" class="dark-mode-toggle"> Dark Mode
+        </div>
     </div>
 
     <script src="script.js"></script>
