--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <div id="time">Time: <span id="time-left">60</span> seconds</div>
             <div id="score">Score: <span id="score-value">0</span></div>
             <div id="tps">TPS: <span id="tps-value">0.00</span></div>
+            <div id="lives">Lives: <span id="lives-value">3</span></div> <!-- Life display -->
         </div>
         <div id="word-display" class="word-display"></div>
         <input type="text" id="word-input" class="word-input" placeholder="Type here..." autofocus>
@@ -28,7 +29,7 @@
             <select id="mode-select" class="mode-select">
                 <option value="60s">60-Second Mode</option>
                 <option value="10s">10-Second Challenge Mode</option>
-                <option value="5s">5-Second Challenge Mode</option> <!-- New 5-Second Mode -->
+                <option value="5s-lives">5-Second Challenge Mode with Lives</option> <!-- 5-Second Mode with Lives -->
             </select>
 
             <label for="dark-mode-toggle">Dark Mode:</label>
