--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
         <h1>Typing Speed Test</h1>
         <div id="menu-toggle" class="menu-toggle">&#9776;</div> <!-- Hamburger Menu -->
         <div id="game-info">
-            <div id="time">Time: <span id="time-left">60</span> seconds</div>
-            <div id="score">Score: <span id="score-value">0</span></div>
+            <div id="time">Time: <span id="time-left">60</span> seconds |</div>
+            <div id="score">Score: <span id="score-value">0</span> |</div>
             <div id="tps">TPS: <span id="tps-value">0.00</span></div>
-            <div id="lives">Lives: <span id="lives-value">3</span></div> <!-- Life display -->
+            <div id="lives" class="hidden">Lives: <span id="lives-value">3</span></div> <!-- Life display, initially hidden -->
         </div>
         <div id="word-display" class="word-display"></div>
         <input type="text" id="word-input" class="word-input" placeholder="Type here..." autofocus>
