--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
         <h1>Typing Speed Test</h1>
         <div id="menu-toggle" class="menu-toggle">&#9776;</div> <!-- Hamburger Menu -->
         <div id="game-info">
-            <div id="time">Time: <span id="time-left">60</span> seconds |</div>
-            <div id="score">Score: <span id="score-value">0</span> |</div>
-            <div id="tps">TPS: <span id="tps-value">0.00</span></div>
-            <div id="lives" class="hidden">Lives: <span id="lives-value">3</span></div> <!-- Life display, initially hidden -->
+            <div id="game-stats">
+                Time: <span id="time-left">60</span> seconds | Score: <span id="score-value">0</span> | TPS: <span id="tps-value">0.00</span>
+            </div>
+            <div id="lives" style="display:none;">Lives: <span id="lives-value">3</span></div> <!-- Life display, hidden by default -->
         </div>
         <div id="word-display" class="word-display"></div>
         <input type="text" id="word-input" class="word-input" placeholder="Type here..." autofocus>
@@ -29,7 +29,8 @@
             <select id="mode-select" class="mode-select">
                 <option value="60s">60-Second Mode</option>
                 <option value="10s">10-Second Challenge Mode</option>
-                <option value="5s-lives">5-Second Challenge Mode with Lives</option> <!-- 5-Second Mode with Lives -->
+                <option value="5s-lives">5-Second Challenge Mode with Lives</option>
+                <option value="3s-lives">3-Second Challenge Mode with Lives</option> <!-- 3-Second Mode with Lives -->
             </select>
 
             <label for="dark-mode-toggle">Dark Mode:</label>
