--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <div class="container">
         <h1>Typing Speed Test</h1>
+        <div id="current-mode-display" class="mode-display">Mode: 60-Second Mode</div> <!-- Dynamic Mode Display -->
         <div id="menu-toggle" class="menu-toggle">&#9776;</div> <!-- Hamburger Menu -->
         <div id="game-info">
             <div id="game-stats">
@@ -30,7 +31,7 @@
                 <option value="60s">60-Second Mode</option>
                 <option value="10s">10-Second Challenge Mode</option>
                 <option value="5s-lives">5-Second Challenge Mode with Lives</option>
-                <option value="3s-lives">3-Second Challenge Mode with Lives</option> <!-- 3-Second Mode with Lives -->
+                <option value="3s-lives">3-Second Challenge Mode with Lives</option>
             </select>
 
             <label for="dark-mode-toggle">Dark Mode:</label>
