--- a/index.html
+++ b/index.html
@@ -14,11 +14,7 @@
         
         <div id="game-info">
             <div id="stats-container">
-                <span id="time-display">Time: <span id="time-left">60</span> seconds</span>
-                <span>|</span>
-                <span id="score-display">Score: <span id="score-value">0</span></span>
-                <span>|</span>
-                <span id="tps-display">TPS: <span id="tps-value">0.00</span></span>
+                <span id="time-display">Time: <span id="time-left">60</span> seconds</span><span>|</span><span id="score-display">Score: <span id="score-value">0</span></span><span>|</span><span id="tps-display">TPS: <span id="tps-value">0.00</span></span>
             </div>
             <div id="lives" style="display:none;">Lives: <span id="lives-value">3</span></div> <!-- Life display, hidden by default -->
         </div>
