--- a/index.html
+++ b/index.html
@@ -11,14 +11,12 @@
         <h1>Typing Speed Test</h1>
         <div id="current-mode-display" class="mode-display">Mode: 60-Second Mode</div> <!-- Dynamic Mode Display -->
         <div id="menu-toggle" class="menu-toggle">&#9776;</div> <!-- Hamburger Menu -->
-        
         <div id="game-info">
-            <div id="stats-container">
-                <span id="time-display">Time: <span id="time-left">60</span> seconds</span><span>|</span><span id="score-display">Score: <span id="score-value">0</span></span><span>|</span><span id="tps-display">TPS: <span id="tps-value">0.00</span></span>
+            <div id="game-stats">
+                Time: <span id="time-left">60</span> seconds | Score: <span id="score-value">0</span> | TPS: <span id="tps-value">0.00</span>
             </div>
             <div id="lives" style="display:none;">Lives: <span id="lives-value">3</span></div> <!-- Life display, hidden by default -->
         </div>
-        
         <div id="word-display" class="word-display"></div>
         <input type="text" id="word-input" class="word-input" placeholder="Type here..." autofocus>
         <button id="start-btn" class="start-btn">Start Game</button>
