--- a/index.html
+++ b/index.html
@@ -1,22 +1,30 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Typing Speed Game</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
+
     <div class="container">
         <h1>Typing Speed Test</h1>
+
         <div id="current-mode-display" class="mode-display">Mode: 60-Second Mode</div> <!-- Dynamic Mode Display -->
+
         <div id="menu-toggle" class="menu-toggle">&#9776;</div> <!-- Hamburger Menu -->
+
         <div id="game-info">
             <div id="game-stats">
                 Time: <span id="time-left">60</span> seconds | Score: <span id="score-value">0</span> | TPS: <span id="tps-value">0.00</span>
             </div>
+
             <div id="lives" style="display:none;">Lives: <span id="lives-value">3</span></div> <!-- Life display, hidden by default -->
         </div>
+
         <div id="word-display" class="word-display"></div>
         <input type="text" id="word-input" class="word-input" placeholder="Type here..." autofocus>
         <button id="start-btn" class="start-btn">Start Game</button>
@@ -32,6 +40,8 @@
                 <option value="10s">10-Second Challenge Mode</option>
                 <option value="5s-lives">5-Second Challenge Mode with Lives</option>
                 <option value="3s-lives">3-Second Challenge Mode with Lives</option>
+                <option value="7s-lives">7-Second Challenge Mode with Lives</option>
+                <option value="2s-lives">2-Second Challenge Mode with Lives</option>
             </select>
 
             <label for="dark-mode-toggle">Dark Mode:</label>
@@ -41,4 +51,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
