--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
                 <option value="3s-lives">3-Second Challenge Mode with Lives</option>
                 <option value="7s-lives">7-Second Challenge Mode with Lives</option>
                 <option value="2s-lives">2-Second Challenge Mode with Lives</option>
+                <option value="hard">Hard Mode</option>
+                <option value="extreme">Extreme Mode</option>
+                <option value="zen">Zen Mode</option>
+                <option value="sudden-death">Sudden Death Mode</option>
             </select>
 
             <label for="dark-mode-toggle">Dark Mode:</label>
