--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -13,7 +13,7 @@
     <div class="container">
         <h1>Typing Speed Test</h1>
 
-        <div id="current-mode-display" class="mode-display">Mode: 60-Second Mode</div> <!-- Dynamic Mode Display -->
+        <div id="current-mode-display" class="mode-display">Mode: 60-Second Mode</div>
 
         <div id="menu-toggle" class="menu-toggle">&#9776;</div> <!-- Hamburger Menu -->
 
@@ -27,9 +27,6 @@
 
         <div id="word-display" class="word-display"></div>
         <input type="text" id="word-input" class="word-input" placeholder="Type here..." autofocus>
-
-        <div id="multiplier-display">Multiplier: x1</div> <!-- Multiplier Display -->
-        
         <button id="start-btn" class="start-btn">Start Game</button>
         <div id="result-message"></div>
 
@@ -45,6 +42,9 @@
                 <option value="3s-lives">3-Second Challenge Mode with Lives</option>
                 <option value="7s-lives">7-Second Challenge Mode with Lives</option>
                 <option value="2s-lives">2-Second Challenge Mode with Lives</option>
+                <option value="15s">15-Second Challenge Mode</option>
+                <option value="30s-lives">30-Second Mode with Lives</option>
+                <option value="1s-lives">1-Second Challenge Mode with Lives</option>
             </select>
 
             <label for="dark-mode-toggle">Dark Mode:</label>
